--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,14 @@ dependencies:
   get_it: ^7.1.3
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  flutter_bloc: ^7.1.0
+  rxdart: ^0.27.1
 
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  analyzer: 2.7.0
+  bloc_test: ^8.0.0
   flutter_test:
     sdk: flutter
 
