--- a/about/pubspec.yaml
+++ b/about/pubspec.yaml
@@ -1,7 +1,7 @@
 name: about
 description: A new Flutter package project.
 version: 0.0.1
-publish_to: none
+publish_to: 'none'
 homepage:
 
 environment:
